--- a/app/assets/stylesheets/sample-details.scss
+++ b/app/assets/stylesheets/sample-details.scss
@@ -5,3 +5,15 @@
     }
   }
 }
+
+.versions-table{
+  border: 4px solid blue;
+
+  th {
+    border: 4px solid blue;
+  }
+
+  tr, td {
+    border: 2px solid blue;
+  }
+}
