feat: add expiration data and storage temperature fields to inventory tab

--- a/app/assets/stylesheets/chemical-tab.scss
+++ b/app/assets/stylesheets/chemical-tab.scss
@@ -144,20 +144,24 @@ table.table-borderless {
     }
 
     .text-input-price {
-        width: 22%;
+        width: 11%;
     }
     
     .text-input-person {
-    width: 22%;
+    width: 12%;
+    }
+
+    .text-input-storage-temperature {
+        width: 17%;
     }
     
     .text-input-date {
     margin-top: -17px;
-    width: 35%;
+    width: 45%;
     }
     
     .text-input-required-by {
-    width: 22%;
+    width: 13%;
     }
 }
 
