fix: mistakes from rebase

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -60,6 +60,7 @@
  *= require export-collections.scss
  *= require format-container.scss
  *= require generic_element.scss
+ *= require history.scss
  *= require inventory-label-settings.scss
  *= require ketcher.scss
  *= require material.scss
